# everybody-dance-now

./: .gitignore  make_source.py  make_target.py  normalization.py  pyproject.toml  train_pose2vid.py
src/config/: train_opt.py
src/pix2pixHD/models/: models.py  networks.py  pix2pixHD_model.py
