[tool.poetry]
name = "everybody-dance-now"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python-headless = "^4.7.0.72"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
pycocotools = "^2.0.6"
scipy = "~1.9"
scikit-image = "^0.21.0"
dominate = "^2.8.0"
numpy = "^1.25.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
